--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ main{
 
 hr{
   margin: 20px -16px;
+  border-top: 1px solid #38444d;
 }
 section{
   margin-bottom: 9.6rem;
@@ -101,9 +102,21 @@ color: #fff;
   width: 30rem;
   height: 100%;
   padding: 1.6rem;
+  border-right: 1px solid #444;
 }
 .aside-title{
   margin-bottom: 1.6rem;
+}
+.aside-title h2:hover{
+  color: #049EF4;
+  transition: all .3s;
+}
+.aside-title h2{
+  font-size: 1.8rem;
+  margin-bottom: .8rem;
+}
+.aside-title h3{
+  font-size: 1.4rem;
 }
 .aside-list{
   display: flex;
@@ -208,7 +221,7 @@ color: #fff;
 /* MEDIA */
 @media (max-width: 640px){
   .container{
-    padding: 2.4rem;
+    padding: 8rem 2.4rem 2.4rem 2.4rem;
 
   }
   .burguer-container{
@@ -250,6 +263,9 @@ color: #fff;
     left: 50%;
     pointer-events: auto;
     visibility: visible;
+  }
+  .aside-title{
+    margin: 0;
   }
   
 
