--- a/style.css
+++ b/style.css
@@ -107,9 +107,9 @@ color: #fff;
 .aside-title{
   margin-bottom: 1.6rem;
 }
-.aside-title h2:hover{
+.aside-title h2{
+  margin-top: 0;
   color: #049EF4;
-  transition: all .3s;
 }
 .aside-title h2{
   font-size: 1.8rem;
@@ -138,8 +138,37 @@ color: #fff;
   color: #049EF4;
 }
 
+pre{
+  padding: 2rem;
+  overflow-x: auto;
+  white-space: pre-line;
+  border-left: 4px solid #04aa6d;
+  background-color:#333333;
+  margin-bottom: .8rem;
+}
 
 
+.colors{
+  margin-bottom: 0;
+  padding-bottom: 9.6rem;
+}
+
+
+h2{
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+}
+h1{
+
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+.btn-prev-next{
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 1.6rem;
+  margin-bottom: 1.6rem;
+}
 
 /*  NAVBAR */
 
